objects/Group_Services__c.object
<CustomObject>
    <fields>
        <fullName>RMB_Rate_Shift__c</fullName>
        <label>RMB Rate Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Billing_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate/Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Request Type Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisions_To_Mockups__c</fullName>
        <label>Revisions To Mockups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_For_Implementer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted For Implementer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIN_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TIN Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Table_Data_Sets_and_Misc_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Table, Data Sets and Misc Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Contract Code(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_HPCC_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test HPCC Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Package Code(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UWR_Open_For_Cancels__c</fullName>
        <label>UWR Open For Cancels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Form_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Update Form Codes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Watch_List_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Watch List Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Watch_List_Status__c</fullName>
        <label>Watch List Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_GS_General_Information_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Services</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Group_Services_Overall_Status__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Group_Services_National_Group_Services</fullName>
        <filterScope>Queue</filterScope>
        <label>Group Services - National</label>
        <queue>Group_Services_National</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Group_Services</fullName>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Group_Services_Overall_Status__c</columns>
        <columns>Owner_Fullname__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Owner_the_Logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Group Services Implementations</label>
    </listViews>
    <nameField>
        <displayFormat>GSA-{000000}</displayFormat>
        <label>Group Services Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Services</pluralLabel>
    <recordTypes>
        <fullName>JAA_NASCO</fullName>
        <active>true</active>
        <label>JAA NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>JAA_WGS</fullName>
        <active>true</active>
        <label>JAA WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_NASCO</fullName>
        <active>true</active>
        <label>National NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_WGS</fullName>
        <active>true</active>
        <label>National WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_01_Is_Eligibility_applicable</fullName>
        <active>true</active>
        <errorConditionFormula>AND (!$User.BypassValidation__c,ISPICKVAL(Is_Eligibility_Applicable__c,&apos;Yes&apos;),OR
(ISBLANK( TEXT(Production_Enrollment_File_Status__c)),TEXT(Production_Enrollment_File_Status__c) =&quot;N/A&quot;))</errorConditionFormula>
        <errorDisplayField>Production_Enrollment_File_Status__c</errorDisplayField>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_02_Is_Eligibility_applicable</fullName>
        <active>true</active>
        <description>You must enter a value when Is Eligibility Applicable has been selected with Yes value.</description>
        <errorConditionFormula>AND (!$User.BypassValidation__c,!ISNEW(),ISPICKVAL(  Is_Eligibility_Applicable__c  ,&apos;Yes&apos;),ISBLANK( TEXT( Is_This_A_COBRA_Only_File__c )))</errorConditionFormula>
        <errorDisplayField>Is_This_A_COBRA_Only_File__c</errorDisplayField>
        <errorMessage>You must enter a value when Is Eligibility Applicable has been selected with Yes value.</errorMessage>
    </validationRules>
</CustomObject>